feat: description and expirationDate
